# LLRP-agent

./: .gitignore  README.md  build_mingw.ps1  build_native.sh  config.properties  prueba.py  rfid_inventory_events.jsonl
cpp/: CMakeLists.txt
cpp/src/: LLRPTestClient.cpp  ltkcpp.h  main.cpp
cpp/src/llrp/: Config.cpp  Config.h
cpp/src/platform/: SocketUtils.h
cpp/src/reader/: ReaderAdapter.cpp  ReaderAdapter.h
cpp/src/readers/: GenericLLRPReader.cpp  GenericLLRPReader.h  MockLLRPReader.cpp  MockLLRPReader.h  RFIDReader.h  ThingMagicM7EReader.cpp  ThingMagicM7EReader.h
java/src/: LLRPTestClient.java
java/src/llrp/: Config.java
java/src/reader/: ReaderAdapter.java
java/src/readers/: RFIDReader.java  ThingMagicM7EReader.java
lib/: README.md  libltkcpp_lib-x86-linux-windows_1_0_0_8.tgz
lib/libltkcpp_lib-x86-linux-windows_1_0_0_8/libltkcpp/: ltkcpp_platform.h
mercuryapi-1.37.0.80/c/arduino_proj/Arduino_Mega2560/: README.txt
mercuryapi-1.37.0.80/c/doc/: annotated.html  classes.html  deprecated.html  files.html  functions.html  functions_0x61.html  functions_0x62.html  functions_0x63.html  functions_0x64.html  functions_0x65.html  functions_0x66.html  functions_0x67.html  functions_0x68.html  functions_0x69.html  functions_0x6b.html  functions_0x6c.html  functions_0x6d.html  functions_0x6e.html  functions_0x6f.html  functions_0x70.html  functions_0x71.html  functions_0x72.html  functions_0x73.html  functions_0x74.html  functions_0x75.html  functions_0x76.html  functions_0x77.html  functions_0x78.html  functions_eval.html  functions_vars.html  functions_vars_0x61.html  functions_vars_0x62.html  functions_vars_0x63.html  functions_vars_0x64.html  functions_vars_0x65.html  functions_vars_0x66.html  functions_vars_0x67.html  functions_vars_0x68.html  functions_vars_0x69.html  functions_vars_0x6b.html  (+701 more)
mercuryapi-1.37.0.80/c/kinetis_proj/.mcuxpressoide_packages_support/: crt_directory.xml  info.properties
mercuryapi-1.37.0.80/c/kinetis_proj/FRDMKL25Z/: .cproject  .project
mercuryapi-1.37.0.80/c/kinetis_proj/FRDMKL27Z/: .cproject  .project
mercuryapi-1.37.0.80/c/proj/MercuryAPI/: MercuryAPI.vcproj
mercuryapi-1.37.0.80/c/proj/Samples/: Samples.sln
mercuryapi-1.37.0.80/c/proj/jni/: README.txt  jni.vcproj
mercuryapi-1.37.0.80/c/projVS2019/MercuryAPI/: MercuryAPI.vcxproj
mercuryapi-1.37.0.80/c/projVS2019/Samples/: AntennaList.vcxproj  Authenticate.vcxproj  AutonomousMode.vcxproj  Bap.vcxproj  BlockPermalock.vcxproj  BlockWrite.vcxproj  CustomAntennaConfig.vcxproj  DenatranIAVCustomTagOperations.vcxproj  DeviceDetection.vcxproj  EM4325CustomTagOps.vcxproj  EmbeddedReadTID.vcxproj  FastId.vcxproj  FirmwareLoad.vcxproj  GPIOCommands.vcxproj  LicenseKey.vcxproj  LoadSaveConfiguration.vcxproj  MultiProtocolRead.vcxproj  MultiReadAsync.vcxproj  NTAG_ExtTagOps.vcxproj  PassThrough.vcxproj  Read.vcxproj  ReadAllMemBanks-Gen2.vcxproj  ReadAsync.vcxproj  ReadAsyncFilter-ISO18k6B.vcxproj  ReadAsyncFilter.vcxproj  ReadAsyncTrack.vcxproj  ReadBuffer.vcxproj  ReadCustomTransport.vcxproj  ReadIntoArray.vcxproj  ReadStopTrigger.vcxproj  ReaderInformation.vcxproj  ReaderStats.vcxproj  RebootReader.vcxproj  RegionConfiguration.vcxproj  RegulatoryTesting.vcxproj  ReturnLoss.vcxproj  SL900AGetCalibrationData.vcxproj  SL900AGetSensorValue.vcxproj  SL900ASetCalibrationData.vcxproj  SL900ASetSFEParameters.vcxproj  (+9 more)
mercuryapi-1.37.0.80/c/src/api/: Makefile  RegionConfiguration  RegulatoryTesting  SL900Agetcalibrationdata  SL900Agetsensorvalue  SL900Asetcalibrationdata  SL900Asetsfeparameters  antennalist  authenticate  autonomousmode  bap  blockpermalock  blockwrite  customantennaconfig  denatranIAVcustomtagoperations  deviceDetection  embeddedreadtid  fastid  filter  firmwareload  gpiocommands  libmercuryapi.so.1  licensekey  llrp_reader.c  llrp_reader_l3.c  loadsaveconfiguration  locktag  multiprotocolread  multireadasync  osdep_arduino.c  passThrough  read  readallmembanks-GEN2  readasync  readasyncGPIOControl  readasyncfilter  readasyncfilter-ISO18k-6b  readasyncgpo  readasynctrack  readbuffer  (+42 more)
mercuryapi-1.37.0.80/c/src/samples/: EM4325CustomTagOps.c  NTAG_ExtTagOps.c  RegionConfiguration.c  RegulatoryTesting.c  SL900Agetcalibrationdata.c  SL900Agetsensorvalue.c  SL900Asetcalibrationdata.c  SL900Asetsfeparameters.c  antennalist.c  authenticate.c  autonomousmode.c  bap.c  blockpermalock.c  blockwrite.c  customantennaconfig.c  denatranIAVcustomtagoperations.c  deviceDetection.c  embeddedreadtid.c  fastid.c  filter.c  firmwareload.c  licensekey.c  locktag.c  multiprotocolread.c  multireadasync.c  read  read.c  read1234  readallmembanks-GEN2.c  readasync.c  readasyncfilter-ISO18k-6b.c  readasyncfilter.c  readasynctrack.c  readbuffer.c  readerInfo.c  readerstats.c  readintoarray.c  (+8 more)
mercuryapi-1.37.0.80/cs/: MercuryAPI.sln  module.mk
mercuryapi-1.37.0.80/cs/Linux/: ReadAsync  ReadAsync.deps.json
mercuryapi-1.37.0.80/cs/ThingMagic.InventoryManagementAPILinux/: InventoryManagementAPI.cs  ThingMagic.InventoryManagementAPI.csproj
mercuryapi-1.37.0.80/cs/ThingMagic.Reader/: ExtTagOp.cs  Gen2.cs  Iso14443a.cs  Iso14443b.cs  Iso15693.cs  Lf125khz.cs  Lf134khz.cs  LlrpReader.cs  LoadSaveConfiguration.cs  Reader.cs  RqlReader.cs  SerialReader.cs  SerialTransportTCP.cs  SimpleReadPlan.cs  TagReadData.cs  ThingMagic.Reader.csproj  UltraLightNtagTagOp.cs
mercuryapi-1.37.0.80/cs/ThingMagic.ReaderCE/: ThingMagic.ReaderCE.csproj
mercuryapi-1.37.0.80/cs/ThingMagic.ReaderLinux/: ThingMagic.ReaderLinux.csproj
mercuryapi-1.37.0.80/cs/net8.0/: MercuryAPI.deps.json
mercuryapi-1.37.0.80/java/: linux-aarch64.lib  manifest  module.mk
mercuryapi-1.37.0.80/java/doc/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index-all.html  index.html  overview-tree.html  serialized-form.html
src/: Main.java
src/com/thingmagic/: SerialTransportNative.java
src/reader/: ReaderAdapter.java
src/readers/: GenericLLRPReader.java
tools/llrp_client/: README.md  config.py  generic_llrp_reader.py  llrp_test_client.py  reader_adapter.py
(+543 files in other folders)
